--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -21,7 +21,7 @@
                     <input type="text" id="username" name="username" required>
                     <label for="password">Пароль:</label>
                     <input type="password" id="password" name="password" required>
-                    <button type="submit" class="login">Login</button>
+                    <button type="submit" class="login">Авторизоваться</button>
                     <button type="button" onclick="window.location.href='registration.html'">Регистрация</button>
                 </form>
             </section>
