добавлена функция регистрации. дальше будут создаваться комнаты чата, функции восстановления пароля и верификация пользователя через электронную почту

--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -27,8 +27,8 @@
             </section>
         </main>
         <footer>
-            <p>Автор: Ваша команда</p>
-            <p><a href="mailto:support@rendidchat.com">Контакты</a></p>
+            <p>Александр Петухов</p>
+            <p><a href="https://github.com/Rensid/terminal_chat"></a></p>
         </footer>
     </div>
     <script src="../scripts/auth/login.js"></script>
